# startds

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
startds/: __main__.py
startds/conf/exp_template/: .env-tpl  .gitignore-tpl  README.md-tpl  requirements.txt-tpl  run.py-tpl  setup.py-tpl
startds/conf/exp_template/exp_name/metadata/: data.md-tpl  models.md
startds/conf/exp_template/exp_name/src/_apis/: README.md-tpl
startds/conf/exp_template/exp_name/src/_apis/cortex/: cortex.yaml-tpl  main.py-tpl  requirements.txt-tpl
startds/conf/exp_template/exp_name/src/_apis/fastapi/: Dockerfile-tpl  build.sh-tpl  main.py-tpl
startds/conf/exp_template/exp_name/src/_apis/flask/: Dockerfile-tpl  build.sh-tpl  main.py-tpl
startds/conf/exp_template/exp_name/src/_apps/: README.md-tpl
startds/conf/exp_template/exp_name/src/_apps/streamlit/: Dockerfile-tpl  build.sh-tpl  main.py-tpl
startds/conf/exp_template/exp_name/src/_orchestrate/airflow/dags/: dag.py-tpl
startds/conf/exp_template/exp_name/src/_tests/: test_clean.py-tpl
startds/conf/exp_template/exp_name/src/clean/: clean_data.py-tpl  connect_data.py-tpl
startds/conf/exp_template/exp_name/src/explore/: explore.py-tpl  visualize.py-tpl
startds/conf/exp_template/exp_name/src/train/: model.py-tpl  predict_model.py-tpl  train_model.py-tpl
startds/conf/exp_template/exp_name/src/transform/: setup_experiment.py-tpl  transform_data.py-tpl
startds/core/management/: __init__.py  base.py  template.py
startds/core/management/commands/: create.py  env.py
