[metadata]
name = startds
version = 0.0.13
url = https://www.dolphyn.io/
author = Dolphyn
author_email = support@dolphyn.io
description = A data science experiment framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/dolphynhq/startds
    Source = https://github.com/dolphynhq/startds

[options]
python_requires = >=3.6
packages = find:
include_package_data = True    
zip_safe = False
install_requires =
    
[options.entry_points]
console_scripts =
    startds = startds.core.management:execute_from_command_line